weblio/form-proxy/public/form-proxy-public-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: form-proxy-public
  namespace: form-proxy
  labels:
    app.kubernetes.io/name: form-proxy-public
    app.kubernetes.io/component: email
    app.kubernetes.io/part-of: weblio
spec:
  selector:
    app.kubernetes.io/name: form-proxy-public
    app.kubernetes.io/component: email
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
